--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="./styles.css">
 	</head>
 	<body>
-		<header>Live Camera Product Recognition Demo!</header>
+		<header>Live Camera Product Recognition Demo</header>
 		<div id="overlay"></div>
 		<canvas id="webcam-canvas"></canvas>
 		<div class="row">
